# pydref-serializers

./: .gitignore  pyproject.toml
.circleci/: config.yml
pydref_serializers/: __init__.py  builders.py  getters.py  serializers.py
pydref_serializers/mappers/: fields.py
pydref_serializers/serializers/: base.py  field_mappers.py  getters.py  mappers.py
tests/: conftest.py  test_field_mappers.py  test_getters.py  test_mappers.py  test_model_serializer.py  test_model_serializer_builder.py
tests/fixtures/: __init__.py  models.py
